# mousetracker

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  visualizationwindow.cpp  visualizationwindow.h
